--- a/plugins/AppendGrid/tmpl/append_grid_with_json/field.tmpl
+++ b/plugins/AppendGrid/tmpl/append_grid_with_json/field.tmpl
@@ -5,7 +5,7 @@
     <script src="<$mt:var name="static_uri"$>plugins/AppendGrid/jquery.appendGrid/jquery.appendGrid-1.4.2.min.js?v=<mt:var name='plugin_version'>" type="text/javascript"></script>
 </mt:unless>
 
-<input type="hidden" name="<mt:var name="field_name" escape="html">" id="<mt:var name="field_id">" class="text" value="<mt:var name="field_value" escape="html">" />
+<textarea name="<mt:var name="field_name" escape="html">" id="<mt:var name="field_id">" class="text high"><mt:var name="field_value" escape="html" /></textarea>
 
 <div class="append-grid-wrapper">
 <table id="<mt:var name="field_id" />-grid-table"></table>
@@ -14,35 +14,60 @@
 <script>
     (function() {
         var $ = jQuery;
+        var $input = $('#<mt:var name="field_id">');
 
         $(function() {
-            var defaults = {
-                initRows: 3,
-                rowDragging: true,
-                hideButtons: { moveUp: true, moveDown: true },
-                i18n: {
-                    append: '<__trans phrase="Append">',
-                    removeLast: '<__trans phrase="Remove Last">',
-                    insert: '<__trans phrase="Insert Above">',
-                    remove: '<__trans phrase="Remove">',
-                    moveUp: '<__trans phrase="Move Up">',
-                    moveDown: '<__trans phrase="Move Down">',
-                    rowDrag: '<__trans phrase="Move Row With Drag & Drop">',
-                    rowEmpty: '<__trans phrase="No Rows">'
+            try {
+                var defaults = {
+                    initRows: 3,
+                    rowDragging: true,
+                    hideButtons: { moveUp: true, moveDown: true },
+                    i18n: {
+                        append: '<__trans phrase="Append">',
+                        removeLast: '<__trans phrase="Remove Last">',
+                        insert: '<__trans phrase="Insert Above">',
+                        remove: '<__trans phrase="Remove">',
+                        moveUp: '<__trans phrase="Move Up">',
+                        moveDown: '<__trans phrase="Move Down">',
+                        rowDrag: '<__trans phrase="Move Row With Drag & Drop">',
+                        rowEmpty: '<__trans phrase="No Rows">'
+                    }
+                };
+
+                var forces = {};
+                var options = <mt:var name="options">;
+
+                <mt:if name="field_value">
+                var data = JSON.parse("<mt:var name="field_value" escape="js" />");
+                if ( typeof data == 'string' ) { data = JSON.parse(data); }
+                if ( data && data instanceof Array ) { options.initData = data; }
+                </mt:if>
+
+                var opts = $.extend(defaults, options, forces);
+                var $grid = $('#<mt:var name="field_id">-grid-table').appendGrid(opts);
+
+                $grid
+                    .closest('form').submit(function() {
+                        var value = $grid.appendGrid('getAllValue');
+                        var json = JSON.stringify(value);
+
+                        try {
+                            var str = JSON.parse(json);
+                            if ( typeof str == 'string' ) { json = str; }
+                        } catch (ex) {}
+
+                        $input.val(json);
+                        return true;
+                    });
+
+                $input.addClass('hidden');
+            } catch(ex) {
+                if ( console ) {
+                    console.log(ex);
+                } else {
+                    alert(ex.message || ex);
                 }
-            };
-            var forces = {};
-            var options = <mt:var name="options">;
-            var opts = $.extend(defaults, options, forces);
-
-            var $input = $('#<mt:var name="field_id">');
-            var $grid = $('#<mt:var name="field_id">-grid-table').appendGrid(opts);
-
-            $('#<mt:var name="field_id">-grid-table')
-                .closest('form').submit(function() {
-                    $input.val(JSON.stringify($grid.appendGrid('getAllValue')));
-                    return true;
-                });
+            }
         });
     })();
 </script>
