--- a/mt-static/plugins/AppendGrid/mt-append-grid.css
+++ b/mt-static/plugins/AppendGrid/mt-append-grid.css
@@ -5,3 +5,18 @@
 .appendGrid {
     margin-bottom: 0px;
 }
+
+.append-grid-wrapper.preview-table-wrapper {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #a0a0a0;
+}
+
+.preview-wrapper .actions-bar {
+    margin-top: 2px;
+}
+
+#schema_yaml-field {
+    margin-bottom: 0px;
+}
