--- a/plugins/AppendGrid/tmpl/customfield/field.tmpl
+++ b/plugins/AppendGrid/tmpl/customfield/field.tmpl
@@ -1,10 +1,5 @@
 <mt:unless name="append_grid_included">
-    <link rel="stylesheet" href="<$mt:var name="static_uri"$>plugins/AppendGrid/jquery-ui/jquery-ui.min.css?v=<mt:var name='plugin_version'>" type="text/css" />
-    <link rel="stylesheet" href="<$mt:var name="static_uri"$>plugins/AppendGrid/jquery.appendGrid/jquery.appendGrid-1.5.0.min.css?v=<mt:var name='plugin_version'>" type="text/css" />
-    <link rel="stylesheet" href="<$mt:var name="static_uri"$>plugins/AppendGrid/mt-append-grid.css?v=<mt:var name='plugin_version'>" type="text/css" />
-
-    <script src="<$mt:var name="static_uri"$>plugins/AppendGrid/jquery.appendGrid/jquery.appendGrid-1.5.0.js?v=<mt:var name='plugin_version'>" type="text/javascript"></script>
-    <script src="<$mt:var name="static_uri"$>plugins/AppendGrid/mt-append-grid.js?v=<mt:var name='plugin_version'>" type="text/javascript"></script>
+    <mt:include name="cms/append_grid_html_head.tmpl" component="AppendGrid">
 
     <script type="text/javascript">
         (function($) {
