--- a/plugins/AppendGrid/tmpl/customfield/yaml_options.tmpl
+++ b/plugins/AppendGrid/tmpl/customfield/yaml_options.tmpl
@@ -1,6 +1,4 @@
 <div>
     <textarea name="options" id="options" class="text high"><mt:var name="options" escape="html"></textarea>
 </div>
-<div>
-    <a href="javascript:alert('hello')"><__trans phrase="Build"></a>
-</div>
+<mt:include name="cms/append_grid_preview_component.tmpl" component="AppendGrid" preview_bootup="return jQuery.mtAppendGrid.bootupCustomFieldPreview(this,'yaml')">
