--- a/plugins/AppendGrid/tmpl/customfield/field.tmpl
+++ b/plugins/AppendGrid/tmpl/customfield/field.tmpl
@@ -31,7 +31,7 @@
 <script>
     (function($) {
         $(function() {
-            $.mtAppendGrid.setupGrid(args)({
+            $.mtAppendGrid.setupGrid({
                 options: <mt:var name="options" _default="{}">,
                 forces: {},
                 grid: $('#<mt:var name="field_id">-grid-table'),
