--- a/plugins/AppendGrid/tmpl/customfield/field.tmpl
+++ b/plugins/AppendGrid/tmpl/customfield/field.tmpl
@@ -22,20 +22,29 @@
     </script>
 </mt:unless>
 
+<p class="hidden" id="<mt:var name="field_id">-show-json"><a href="#<mt:var name="field_id">"><__trans phrase="Show JSON"></a></p>
+
 <textarea name="<mt:var name="field_name" escape="html">" id="<mt:var name="field_id">" class="text high"><mt:var name="field_value" escape="html" /></textarea>
 
 <div class="append-grid-wrapper">
-<table id="<mt:var name="field_id" />-grid-table"></table>
+    <table id="<mt:var name="field_id" />-grid-table"></table>
 </div>
 
 <script>
     (function($) {
         $(function() {
+            $('#<mt:var name="field_id" />-show-json a').click(function() {
+                $(this).parent().addClass('hidden');
+                $($(this).attr('href')).removeClass('hidden');
+                return false;
+            });
+
             $.mtAppendGrid.setupGrid({
                 options: <mt:var name="options" _default="{}">,
                 forces: {},
                 grid: $('#<mt:var name="field_id">-grid-table'),
-                input: $('#<mt:var name="field_id">')
+                input: $('#<mt:var name="field_id">'),
+                inputShower: $('#<mt:var name="field_id">-show-json')
             });
         });
     })(jQuery);
