アセット選択ダイアログ表示の修正、JSONテキストエリアのデフォルト値を[]に

--- a/plugins/AppendGrid/tmpl/customfield/field.tmpl
+++ b/plugins/AppendGrid/tmpl/customfield/field.tmpl
@@ -50,7 +50,7 @@
 
     <div class="append-grid-values-wrapper hidden-on-live">
         <h4><__trans phrase="JSON Data"></h4>
-        <textarea class="text high append-grid-values" name="<mt:var name="field_name" escape="html">" id="<mt:var name="field_id">"><mt:var name="field_value" escape="html" /></textarea>
+        <textarea class="text high append-grid-values" name="<mt:var name="field_name" escape="html">" id="<mt:var name="field_id">"><mt:var name="field_value" escape="html" _default="[]" /></textarea>
         <div class="hint"><__trans phrase="To update values of AppendGrid, paste JSON and press AppendGrid to JSON."></div>
         <div class="append-grid-exchange actions-bar actions-bar-bottom line">
             <a href="#" class="button append-grid-get-json"><span class="icon-left icon-up"><__trans phrase="AppendGrid to JSON"></span></a>
