jquery-uiはやはり復活させてカレンダーのボタンを非表示にしてしまうCSSのみ蓋閉め

--- a/mt-static/plugins/AppendGrid/jquery-ui/jquery-ui.css
+++ b/mt-static/plugins/AppendGrid/jquery-ui/jquery-ui.css
@@ -67,13 +67,15 @@
 ----------------------------------*/
 
 /* states and images */
+/* MTの標準カレンダーの左右ボタンを非表示にしてしまうため除去 */
+/*
 .ui-icon {
 	display: block;
 	text-indent: -99999px;
 	overflow: hidden;
 	background-repeat: no-repeat;
 }
-
+*/
 
 /* Misc visuals
 ----------------------------------*/
