--- a/plugins/AppendGrid/tmpl/cms/append_grid_html_head.tmpl
+++ b/plugins/AppendGrid/tmpl/cms/append_grid_html_head.tmpl
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="<$MTStaticWebPath$>plugins/AppendGrid/jquery-ui/jquery-ui.min.css?v=<mt:var name='plugin_version'>" type="text/css" />
 <link rel="stylesheet" href="<$MTStaticWebPath$>plugins/AppendGrid/jquery.appendGrid/jquery.appendGrid-1.6.1.min.css?v=<mt:var name='plugin_version'>" type="text/css" />
 <link rel="stylesheet" href="<$MTStaticWebPath$>plugins/AppendGrid/mt-append-grid.css?v=<mt:var name='plugin_version'>" type="text/css" />
 <script type="text/javascript" src="<$MTStaticWebPath$>plugins/AppendGrid/jquery.appendGrid/jquery.appendGrid-1.6.1.min.js?v=<mt:var name='plugin_version'>"></script>
